# RemoteInclude

./: .appveyor.yml  .dockerignore  .gitconfig  .gitignore  .travis.yml  APKBUILD  CMakeLists.txt  Dockerfile.apk  Dockerfile.xz  PKGBUILD  README.md  RemoteInclude.post-deinstall  RemoteInclude.post-install  RemoteInclude.post-upgrade  RemoteInclude.pre-deinstall  RemoteInclude.pre-install  RemoteInclude.pre-upgrade  docker-apk.sh  docker-xz.sh  fix-variables.sh  project.properties  project.properties.sh  update-variables.sh
.abuild/: abuild.conf
.cmake/: RemoteInclude.cmake  RemoteIncludeConfig.cmake.in
media/: Logo.ai  RemoteInclude.ai
scripts/: entrypoint-apk.sh  entrypoint-xz.sh  get.pl  get.sh  get_contact_CMakeLists.gawk  get_contact_CMakeLists.sh  get_description_APKBUILD.gawk  get_description_APKBUILD.sh  get_description_CMakeLists.gawk  get_description_CMakeLists.sh  get_description_PKGBUILD.sh  get_homepage_CMakeLists.gawk  get_homepage_CMakeLists.sh  get_md5_PKGBUILD.gawk  get_md5_PKGBUILD.sh  get_name.gawk  get_name_APKBUILD.sh  get_name_PKGBUILD.sh  get_packager_abuild.gawk  get_packager_abuild.sh  get_sha1_PKGBUILD.gawk  get_sha1_PKGBUILD.sh  get_sha224_PKGBUILD.gawk  get_sha224_PKGBUILD.sh  get_sha256_PKGBUILD.gawk  get_sha256_PKGBUILD.sh  get_sha384_PKGBUILD.gawk  get_sha384_PKGBUILD.sh  get_sha512_APKBUILD.gawk  get_sha512_APKBUILD.sh  get_sha512_PKGBUILD.gawk  get_sha512_PKGBUILD.sh  get_source_APKBUILD.gawk  get_source_APKBUILD.sh  get_source_PKGBUILD.gawk  get_source_PKGBUILD.sh  get_summary_CMakeLists.gawk  get_summary_CMakeLists.sh  get_url_APKBUILD.gawk  get_url_APKBUILD.sh  (+65 more)
test/: Test.cmake
